# Download-Manager

./: .clang-format  .clang-tidy  .editorconfig  .gitignore  CMakeLists.txt  CONTRIBUTING.md  DEPENDENCIES.md  Doxyfile  IMPLEMENTATION_GUIDE.md  README.md  main.cpp  structure.txt
.github/workflows/: main.yml  msbuild.yml
include/cli/: CommandLineInterface.h  CommandProcessor.h
include/core/: BatchDownloader.h  CloudIntegration.h  ConfigManager.h  DownloadManager.h  DownloadQueue.h  DownloadScheduler.h  DownloadTask.h  DownloadTypes.h  FileManager.h  FtpProtocolHandler.h  HttpClient.h  HttpProtocolHandler.h  MediaHandler.h  NetworkMonitor.h  ProtocolHandler.h  SecurityModule.h  SegmentDownloader.h  Settings.h  Statistics.h  Throttler.h  TorrentProtocolHandler.h  WebsiteCrawler.h
include/plugin/: PluginSystem.h
include/ui/: AddDownloadDialog.h  BatchDownloadDialog.h  CrawlerDialog.h  DownloadItemWidget.h  MainWindow.h  ProgressBar.h  SchedulerDialog.h  SettingsDialog.h  SpeedLabel.h
include/utils/: DatabaseManager.h  FileUtils.h  HashCalculator.h  Logger.h  StringUtils.h  TimeUtils.h  UrlParser.h
src/cli/: CommandLineInterface.cpp
src/core/: BatchDownloader.cpp  DownloadManager.cpp  DownloadQueue.cpp  DownloadScheduler.cpp  DownloadTask.cpp  FileManager.cpp  FtpProtocolHandler.cpp  HttpClient.cpp  HttpProtocolHandler.cpp  MediaHandler.cpp  NetworkMonitor.cpp  ProtocolHandler.cpp  SegmentDownloader.cpp  Settings.cpp  Statistics.cpp  StringUtils.cpp  Throttler.cpp  TorrentProtocolHandler.cpp  WebsiteCrawler.cpp
src/plugin/: PluginLoader.cpp  PluginManager.cpp  PluginSystem.cpp
src/ui/: AddDownloadDialog.cpp  BatchDownloadDialog.cpp  CrawlerDialog.cpp  DownloadItemWidget.cpp  MainWindow.cpp  ProgressBar.cpp  SchedulerDialog.cpp  SettingsDialog.cpp  SpeedLabel.cpp  StatisticsDialog.cpp
src/utils/: DatabaseManager.cpp  FileUtils.cpp  HashCalculator.cpp  Logger.cpp  StringUtils.cpp  TimeUtils.cpp  UrlParser.cpp
